WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
63705
SVGAnimatedLengthListAnimator does not take additive="sum" into accout
https://bugs.webkit.org/show_bug.cgi?id=63705
Summary
SVGAnimatedLengthListAnimator does not take additive="sum" into accout
Dirk Schulze
Reported
2011-06-30 05:54:37 PDT
SVGAnimatedLengthListAnimator does not take additive="sum" into accout.
Attachments
Patch
(20.24 KB, patch)
2011-06-30 06:22 PDT
,
Dirk Schulze
no flags
Details
Formatted Diff
Diff
Patch
(17.14 KB, patch)
2011-06-30 06:38 PDT
,
Dirk Schulze
zimmermann
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Dirk Schulze
Comment 1
2011-06-30 06:22:18 PDT
Created
attachment 99285
[details]
Patch
Dirk Schulze
Comment 2
2011-06-30 06:38:33 PDT
Created
attachment 99290
[details]
Patch
Nikolas Zimmermann
Comment 3
2011-06-30 07:50:05 PDT
Comment on
attachment 99290
[details]
Patch Looks great, it seems to move you solved your length problem? What was the specific trick to get it working?
Dirk Schulze
Comment 4
2011-06-30 08:12:05 PDT
(In reply to
comment #3
)
> (From update of
attachment 99290
[details]
) > Looks great, it seems to move you solved your length problem? What was the specific trick to get it working?
Yes. additive sum is useable with one animation as well. Was a bit confused. :-P See
http://www.w3.org/TR/SVG/animate.html#AdditionAttributes
Nikolas Zimmermann
Comment 5
2011-06-30 12:10:12 PDT
Comment on
attachment 99290
[details]
Patch Oops, I wanted to set r+.
Dirk Schulze
Comment 6
2011-07-01 01:51:52 PDT
Committed
r90219
: <
http://trac.webkit.org/changeset/90219
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug